[package]
name = "rust-esp32-ulp-hello"
version = "0.1.0"
authors = ["ivmarkov"]
edition = "2018"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "ulp", "esp32s2", "riscv"]
description = "A demo binary crate for the ESP32-S2 ULP RISCV chip that blinks a LED via a \"mini\"-GPIO HAL and communicates with the main processor"
repository = "https://github.com/ivmarkov/rust-esp32-ulp-hello"
license = "MIT"
readme = "README.md"

[profile.release]
# symbols are nice and they don't increase the size on Flash
debug = true
opt-level = "z"

[profile.dev]
opt-level = "s"

[dependencies]
riscv-rt = "0.8"
panic-halt = "0.2"
esp-idf-hal = {version = "0.16.2", features = ["ulp"], default-features = false }
