[package]
name = "rust-esp32-ulp-blink"
version = "0.4.1"
authors = ["ivmarkov"]
edition = "2018"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "ulp", "esp32s2", "riscv"]
description = "A demo binary crate for the ESP32-S2 ULP RISCV chip that blinks a LED via a \"mini\"-GPIO HAL and communicates with the main processor"
repository = "https://github.com/ivmarkov/rust-esp32-ulp-blink"
license = "MIT OR Apache-2.0"
readme = "README.md"

[profile.release]
# symbols are nice and they don't increase the size on Flash
debug = true
opt-level = "z"

[profile.dev]
opt-level = "s"

[dependencies]
panic-halt = "0.2"
esp-idf-hal = {version = "0.29", features = ["ulp"], default-features = false }
